apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
